--- a/main-amenazas-ciberneticas.css
+++ b/main-amenazas-ciberneticas.css
@@ -2,9 +2,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: black;
 }
 
+/*HEADER (BARRA DE NAVEGACION)*/
 header {
     background-color: #333;
     color: #fff;
@@ -109,4 +109,73 @@ header li a:hover {
         display: block;
     }
 
+}
+
+/*MAIN (CONTENIDO)*/
+
+.menu {
+    position: fixed;
+    top: auto;
+    left: 200px;
+    width: 200px;
+    height: fit-content;
+    border-radius: 10px;
+    background-color: aquamarine;
+    overflow-y: auto;
+}
+
+.menu h2 {
+    padding-left: 20px;
+    margin: 10px;
+}
+
+.menu ul {
+    list-style-type: none;
+    padding: 10px;
+    margin: 0;
+}
+
+.menu ul li {
+    padding: 10px;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    color: #333;
+}
+
+.menu ul li a:hover {
+    background-color: #ddd;
+}
+
+.main-content {
+    padding-left: 30px;
+}
+
+.content {
+    display: flex;
+    padding-top: 63px;
+    justify-content: center;
+}
+
+p {
+    width: 35%;
+    margin: 0 auto; 
+    text-align: justify; 
+}
+
+h2{
+    width: 35%;
+    margin: 20px auto 10px; 
+}
+
+article h3 {
+    width: 30%;
+    margin: 20px auto 5px; 
+}
+
+article p{
+    width: 30%;
+    margin: 0 auto; 
+    text-align: justify;
 }
