--- a/formulario.css
+++ b/formulario.css
@@ -268,8 +268,10 @@ header li a:hover {
 .figure-footer a{
     color: #fff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 600;
+    display: flex;
+    align-items: center;
 }
 
 
