--- a/main-amenazas-ciberneticas.css
+++ b/main-amenazas-ciberneticas.css
@@ -171,6 +171,12 @@ section{
     scroll-margin-top:120px;
 }
 
+.img-inicio{
+    width: 1100px;
+    height: 550px;
+    margin: 20px 0 10px 30%;
+}
+
 .main-content p {
     margin: 0 10% 10px 30%;
     text-align: justify; 
@@ -194,4 +200,46 @@ section{
 .main-content article p{
     margin: 5px 20% 5px 35%;; 
     text-align: justify;
+}
+
+.footer{
+    background-color: black;
+    color: #fff;
+}
+
+.footer .group-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+    padding: 45px 0;
+    justify-content: center; 
+    align-items: center;
+}
+
+.footer .box-2 img {
+    width: 50px; /* Ancho de las imágenes */
+    height: 50px; /* Alto de las imágenes */
+    margin-right: 5px; /* Espaciado entre las imágenes */
+}
+
+.log-footer{
+    width: 150px;
+    height: auto;
+}
+
+.figure-footer{
+    display: block;
+    text-align: center;
+}
+
+.figure-footer a{
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
 }
